@startuml

title __MODELS's Class Diagram__\n

  namespace Models {
    class Models.Client {
        - adress : String
        - clientName : String
        - client_id : int
        - incident : List<Incident>
        + Client()
        + getAdress()
        + getClientName()
        + getClient_id()
        + getRegion()
        + setAdress()
        + setClientName()
        + setClient_id()
        + setRegion()
        + toString()
    }
  }
  

  namespace Models {
    class Models.Employer {
        - employer_id : int
        - employer_name : String
        + Employer()
        + getEmployer_id()
        + getEmployer_name()
        + getPosition()
        + setEmployer_id()
        + setEmployer_name()
        + setPosition()
        + setPosition()
        + toString()
    }
  }
  

  namespace Models {
    class Models.Incident {
        - descriptionOfIncident : String
        - incidentBeginDate : int
        - incidentID : int
        - incidentNAme : String
        - incidentResolvedDate : int
        - incidentResolvedFlag : int
        + getClient()
        + getDescriptionOfIncident()
        + getIncidentBeginDate()
        + getIncidentID()
        + getIncidentNAme()
        + getIncidentResolvedDate()
        + getIncidentResolvedFlag()
        + getProduct()
        + setClient()
        + setDescriptionOfIncident()
        + setIncidentBeginDate()
        + setIncidentID()
        + setIncidentNAme()
        + setIncidentResolvedDate()
        + setIncidentResolvedFlag()
        + setProduct()
        + toString()
    }
  }
  

  namespace Models {
    class Models.Position {
        - employers : List<Employer>
        - id : int
        - position : String
        + Position()
        + Position()
        + getEmployers()
        + getId()
        + getPosition()
        + setEmployers()
        + setId()
        + setPosition()
        + toString()
    }
  }
  

  namespace Models {
    class Models.Product {
        - incident : List<Incident>
        - partNumber : int
        - productBuildDate : int
        - productId : int
        - productName : String
        + getIncident()
        + getPartNumber()
        + getProductBuildDate()
        + getProductId()
        + getProductName()
        + setIncident()
        + setPartNumber()
        + setProductBuildDate()
        + setProductId()
        + setProductName()
        + toString()
    }
  }
  

  namespace Models {
    class Models.Region {
        - client : List<Client>
        - regionId : int
        - regionName : String
        + Region()
        + Region()
        + getClient()
        + getRegionId()
        + getRegionName()
        + setClient()
        + setRegionId()
        + setRegionName()
        + toString()
    }
  }
  

  Models.Client o-- Models.Region : region
  Models.Employer o-- Models.Position : position
  Models.Incident o-- Models.Client : client
  Models.Incident o-- Models.Product : product
  Models.Position -up-|> dao.EmployerDAOImpl
  Models.Region -up-|> dao.EmployerDAOImpl


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
